Last of master merge commit

--- a/arches/big_core.yaml
+++ b/arches/big_core.yaml
@@ -25,7 +25,7 @@ top.cpu.core0.extension.core_extensions:
   pipelines:
   [
     ["sys"], # exe0
-    ["int", "div"], # exe1
+    ["int", "div", "vset"], # exe1
     ["int", "mul"], # exe2
     ["int", "mul", "i2f", "cmov"], # exe3
     ["int"], # exe4
@@ -57,29 +57,32 @@ top.cpu.core0.rename.scoreboards:
   # |
   # V
   integer.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
-      ["lsu",    1,     1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1,     1],
-      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "vlsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["vlsu",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
-      ["lsu",    1,     1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1,     1],
-      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "vlsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["vlsu",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1,     1]]
   vector.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
-      ["lsu",    1,     1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1,     1],
-      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "vlsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["vlsu",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1,     1]]
