--- a/test/core/rename/test_cores/test_big_core_small_rename_full.yaml
+++ b/test/core/rename/test_cores/test_big_core_small_rename_full.yaml
@@ -40,29 +40,32 @@ top.cpu.core0.rename.scoreboards:
   # |
   # V
   integer.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
-      ["lsu",    1,     1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1,     1],
-      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "vlsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["vlsu",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
-      ["lsu",    1,     1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1,     1],
-      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "vlsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["vlsu",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1,     1]]
   vector.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
-      ["lsu",    1,     1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1,     1],
-      ["iq5",    1,     1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "vlsu", "iq0", "iq1", "iq2", "iq3", "iq4", "iq5"],
+      ["lsu",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["vlsu",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq0",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq1",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq2",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq3",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq4",    1,     1,     1,     1,     1,     1,     1,     1],
+      ["iq5",    1,     1,     1,     1,     1,     1,     1,     1]]
