--- a/test/core/rename/test_cores/test_medium_core.yaml
+++ b/test/core/rename/test_cores/test_medium_core.yaml
@@ -30,26 +30,29 @@ top.rename.scoreboards:
   # |
   # V
   integer.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
-      ["lsu",    1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "vlsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
+      ["lsu",    1,     1,      1,     1,     1,     1,     1],
+      ["vlsu",   1,     1,      1,     1,     1,     1,     1],
+      ["iq0",    1,     1,      1,     1,     1,     1,     1],
+      ["iq1",    1,     1,      1,     1,     1,     1,     1],
+      ["iq2",    1,     1,      1,     1,     1,     1,     1],
+      ["iq3",    1,     1,      1,     1,     1,     1,     1],
+      ["iq4",    1,     1,      1,     1,     1,     1,     1]]
   float.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
-      ["lsu",    1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "vlsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
+      ["lsu",    1,     1,      1,     1,     1,     1,     1],
+      ["vlsu",   1,     1,      1,     1,     1,     1,     1],
+      ["iq0",    1,     1,      1,     1,     1,     1,     1],
+      ["iq1",    1,     1,      1,     1,     1,     1,     1],
+      ["iq2",    1,     1,      1,     1,     1,     1,     1],
+      ["iq3",    1,     1,      1,     1,     1,     1,     1],
+      ["iq4",    1,     1,      1,     1,     1,     1,     1]]
   vector.params.latency_matrix: |
-      [["",      "lsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
-      ["lsu",    1,     1,     1,     1,     1,     1],
-      ["iq0",    1,     1,     1,     1,     1,     1],
-      ["iq1",    1,     1,     1,     1,     1,     1],
-      ["iq2",    1,     1,     1,     1,     1,     1],
-      ["iq3",    1,     1,     1,     1,     1,     1],
-      ["iq4",    1,     1,     1,     1,     1,     1]]
+      [["",      "lsu", "vlsu", "iq0", "iq1", "iq2", "iq3", "iq4"],
+      ["lsu",    1,     1,      1,     1,     1,     1,     1],
+      ["vlsu",   1,     1,      1,     1,     1,     1,     1],
+      ["iq0",    1,     1,      1,     1,     1,     1,     1],
+      ["iq1",    1,     1,      1,     1,     1,     1,     1],
+      ["iq2",    1,     1,      1,     1,     1,     1,     1],
+      ["iq3",    1,     1,      1,     1,     1,     1,     1],
+      ["iq4",    1,     1,      1,     1,     1,     1,     1]]
