Jeffnye gh/fsl submodule (#175)
convert fusion support to sub-module fsl.

remove the old fusion dir. Add a cmake var so fsl uses olympia/mavis
when it is instantiated as a submodule.

---------

Signed-off-by: jeffnye-gh <112903691+jeffnye-gh@users.noreply.github.com>
Co-authored-by: Jeff Nye <jeff@www.condorcomputing.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,7 @@
 	url = git@github.com:sparcians/mavis
 [submodule "stf_lib"]
 	path = stf_lib
-	url = git@github.com:sparcians/stf_lib
+	url = https://github.com/sparcians/stf_lib.git
+[submodule "fsl"]
+	path = fsl
+	url = https://github.com/Condor-Performance-Modeling/fsl
