--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,15 +62,19 @@ set(CMAKE_CXX_FLAGS_DEBUG     "-O0 -g")
 
 # Include directories
 include_directories (core mss sim)
-include_directories (SYSTEM fusion)
+include_directories (SYSTEM fsl)
 include_directories (SYSTEM mavis)
 include_directories (SYSTEM stf_lib)
 
 # Mavis, the Core, MSS, the simulator and Fusion
+
 add_subdirectory (mavis)
 add_subdirectory (core)
 add_subdirectory (mss)
-add_subdirectory (fusion)
+
+# Tell FSL to use the top mavis submodule, instead of fsl's submodule
+set(FSL_MAVIS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/mavis")
+add_subdirectory (fsl)
 
 # Add STF library to the build
 add_subdirectory (${STF_LIB_BASE})
