--- a/.github/workflows/conda/macos_env.yml
+++ b/.github/workflows/conda/macos_env.yml
@@ -7,6 +7,7 @@ dependencies:
   - backports=1.*                                                                                   
   - backports.functools_lru_cache=1.6.*                                                             
   - binutils_impl_linux-64=2.*                                                                      
+  - bison=3.*                                                                      
   - boost=1.78.*                                                                                    
   - boost-cpp=1.78.*                                                                                
   - brotli=1.0.*                                                                                    
